force-app/main/default/objects/Client_Goal__c/Client_Goal__c.object-meta.xml
<CustomObject>
    <label>Client Goal</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Client Goal Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client Goals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>