force-app/main/default/objects/Client_Goal__c/fields/Goal_Name__c.field-meta.xml
<CustomField>
    <fullName>Goal_Name__c</fullName>
    <label>Goal</label>
    <type>TextArea</type>
</CustomField>