force-app/main/default/objects/Client_Goal__c/fields/Term__c.field-meta.xml
<CustomField>
    <fullName>Term__c</fullName>
    <label>Term</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1-3 months</fullName>
            </value>
            <value>
                <fullName>3-6 months</fullName>
            </value>
            <value>
                <fullName>6-12 months</fullName>
            </value>
            <value>
                <fullName>12-36 months (1-3 years)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>