force-app/main/default/objects/Client_Goal__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <inlineHelpText>Define goal type</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Client Success</fullName>
            </value>
            <value>
                <fullName>Relationship</fullName>
            </value>
            <value>
                <fullName>Revenue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>