force-app/main/default/objects/Client_Goal__c/fields/X1st_Objective__c.field-meta.xml
<CustomField>
    <fullName>X1st_Objective__c</fullName>
    <label>1st Objective</label>
    <type>TextArea</type>
</CustomField>