force-app/main/default/objects/Client_Goal__c/fields/X1st_Objective_Completed_by__c.field-meta.xml
<CustomField>
    <fullName>X1st_Objective_Completed_by__c</fullName>
    <label>1st Objective Completed by</label>
    <type>Date</type>
</CustomField>