force-app/main/default/objects/Client_Goal__c/fields/X1st_Objective_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>X1st_Objective_Due_Date__c</fullName>
    <label>1st Objective Due Date</label>
    <type>Date</type>
</CustomField>