force-app/main/default/objects/Client_Goal__c/fields/X1st_Objective_Status__c.field-meta.xml
<CustomField>
    <fullName>X1st_Objective_Status__c</fullName>
    <label>1st Objective Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>