force-app/main/default/objects/Client_Goal__c/fields/X2nd_Objective__c.field-meta.xml
<CustomField>
    <fullName>X2nd_Objective__c</fullName>
    <label>2nd Objective</label>
    <type>TextArea</type>
</CustomField>