force-app/main/default/objects/Client_Goal__c/fields/X2nd_Objective_Completed_by__c.field-meta.xml
<CustomField>
    <fullName>X2nd_Objective_Completed_by__c</fullName>
    <label>2nd Objective Completed by</label>
    <type>Date</type>
</CustomField>