force-app/main/default/objects/Client_Goal__c/fields/X2nd_Objective_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>X2nd_Objective_Due_Date__c</fullName>
    <label>2nd Objective Due Date</label>
    <type>Date</type>
</CustomField>