force-app/main/default/objects/Client_Goal__c/fields/X3rd_Objective__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Objective__c</fullName>
    <label>3rd Objective</label>
    <type>TextArea</type>
</CustomField>