force-app/main/default/objects/Client_Goal__c/fields/X3rd_Objective_Completed_by__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Objective_Completed_by__c</fullName>
    <label>3rd Objective Completed by</label>
    <type>Date</type>
</CustomField>