force-app/main/default/objects/Client_Goal__c/fields/X3rd_Objective_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Objective_Due_Date__c</fullName>
    <label>3rd Objective Due Date</label>
    <type>Date</type>
</CustomField>